[package]
name = "rust-resolution"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true